# cognite

./: README.md  log.md
client/: package.json
client/public/: index.html
client/src/: App.css  App.tsx  ChatWindow.tsx
server/: Cargo.toml
server/src/: main.rs
