[package]
name = "server"
version = "0.1.0"
authors = ["Magnus Hovland Hoff <maghoff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.5.0"
serde = "1.0.125"
serde_json = "1.0.64"
serde_derive = "1.0.125"
warp = "0.3.1"
slog = "2.7.0"
slog-async = "2.6.0"
slog-term = "2.8.0"
futures = "0.3.15"
